--- a/freefire-diamond.html
+++ b/freefire-diamond.html
@@ -1,4 +1,3 @@
 <title>FREE FIRE DIAMOND</title>
 
-<iframe src="https://grabclix.com/1092401" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" >
-    </iframe>
+<iframe src="https://grabclix.com/1092401" width="100%" height="100%"  name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" ></iframe>
