--- a/freefire-diamond.html
+++ b/freefire-diamond.html
@@ -1,24 +1,3 @@
 <title>FREE FIRE DIAMOND</title>
-<style>
-  .container {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-}
 
-/* Then style the iframe to fit in the container div with full height and width */
-.responsive-iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-}
-  </style>
-
-<div class="container">
-  <iframe class="responsive-iframe" src="https://grabclix.com/1092401"></iframe>
-</div>
+<iframe src="https://grabclix.com/1092401" width="100%" height="100%"  name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" ></iframe>
