--- a/freefire-diamond.html
+++ b/freefire-diamond.html
@@ -1,3 +1,3 @@
 <title>FREE FIRE DIAMOND</title>
 
-<iframe src="https://grabclix.com/1092401" width="80%" height="50%"></iframe>
+<iframe src="https://grabclix.com/1092401"></iframe>
