--- a/freefire-diamond.html
+++ b/freefire-diamond.html
@@ -1,3 +1,4 @@
 <title>FREE FIRE DIAMOND</title>
 
-<iframe src="https://grabclix.com/1092401"></iframe>
+<iframe src="<iframe src="hello.html" width="400" height="200"></iframe>"></iframe>
+<iframe src="hello.html" width="400" height="200" style="border: none;"></iframe>
