--- a/freefire-diamond.html
+++ b/freefire-diamond.html
@@ -1,4 +1,3 @@
 <title>FREE FIRE DIAMOND</title>
 
-<iframe src="<iframe src="hello.html" width="400" height="200"></iframe>"></iframe>
-<iframe src="hello.html" width="400" height="200" style="border: none;"></iframe>
+<iframe src="https://grabclix.com/1092401" width="400" height="200" style="border: none;"></iframe>
