--- a/freefire-diamond.html
+++ b/freefire-diamond.html
@@ -1,3 +1,3 @@
 <title>FREE FIRE DIAMOND</title>
 
-<iframe src="https://grabclix.com/1092401" width="400" height="200" style="border: none;"></iframe>
+<iframe src="https://grabclix.com/1092401" width='100%' height='90%' marginwidth='0' marginheight='0' scrolling='no' frameborder='0'>                                                                                         
